--- a/config/database.yml
+++ b/config/database.yml
@@ -1,18 +1,3 @@
-# PostgreSQL. Versions 9.3 and up are supported.
-#
-# Install the pg driver:
-#   gem install pg
-# On macOS with Homebrew:
-#   gem install pg -- --with-pg-config=/usr/local/bin/pg_config
-# On Windows:
-#   gem install pg
-#       Choose the win32 build.
-#       Install PostgreSQL and put its /bin directory on your path.
-#
-# Configure Using Gemfile
-# gem "pg"
-#
-
 default: &default
   adapter: postgresql
   encoding: unicode
@@ -31,4 +16,5 @@ production:
   url: <%= ENV["DATABASE_URL"] %>
 
 cable:
-  <<: *production
+  <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
