--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,10 @@ production:
     <<: *default
     url: <%= ENV["DATABASE_URL"] %>
 
+  cache:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
+
 cable:
   <<: *default
   url: <%= ENV["DATABASE_URL"] %>
